--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@
 /web/profiles/contrib/
 /web/libraries/
 
+# Ignore node modules.
+/node_modules
+/tests/node_modules
+
 # Ignore sensitive information
 /web/sites/*/settings.php
 /web/sites/*/settings.local.php
