--- a/composer.json
+++ b/composer.json
@@ -20,10 +20,11 @@
     "composer/installers": "^1.2",
     "cweagans/composer-patches": "^1.6.5",
     "drupal-composer/drupal-scaffold": "^2.5",
+    "drupal/config_split": "^1.4",
     "drupal/console": "^1.0.2",
     "drupal/core": "^8.7.0",
     "drupal/graphql": "^4.0@alpha",
-    "drupal/config_split": "^1.4",
+    "drupal/pathauto": "^1.5",
     "drush/drush": "^9.0.0",
     "vlucas/phpdotenv": "^2.4",
     "webflo/drupal-finder": "^1.0.0",
