--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "drupal/config_split": "^1.4",
     "drupal/console": "^1.0.2",
     "drupal/core": "^8.7.0",
+    "drupal/field_collection": "^1.0@alpha",
     "drupal/graphql": "^4.0@alpha",
     "drupal/pathauto": "^1.5",
     "drush/drush": "^9.0.0",
