--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,10 @@
     "drupal/config_split": "^1.4",
     "drupal/console": "^1.0.2",
     "drupal/core": "^8.7.0",
+    "drupal/drupal8_zymphonies_theme": "^1.4",
     "drupal/field_collection": "^1.0@alpha",
     "drupal/graphql": "^4.0@alpha",
+    "drupal/himalaya": "^5.6",
     "drupal/pathauto": "^1.5",
     "drush/drush": "^9.0.0",
     "vlucas/phpdotenv": "^2.4",
