--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
     "drupal/graphql": "^4.0@alpha",
     "drupal/himalaya": "^5.6",
     "drupal/pathauto": "^1.5",
+    "drupal/school_zymphonies_theme": "^1.1",
     "drush/drush": "^9.0.0",
     "vlucas/phpdotenv": "^2.4",
     "webflo/drupal-finder": "^1.0.0",
