--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
-    "scripts": {
-      "open": "cypress open"
-    }
+  "scripts": {
+    "open": "cypress open"
+  },
+  "devDependencies": {
+    "cypress": "^3.4.1"
   }
-  
+}
