--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
     "drupal/console": "~1.0",
     "drupal/core": "^8.7.0",
     "drupal/graphql": "^4.0@alpha",
+    "drupal/school_zymphonies_theme": "^1.1",
     "drupal/pathauto": "^1.5",
     "drupal/school_zymphonies_theme": "^1.1",
     "drush/drush": "^9.0.0",
