--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "drupal-composer/drupal-scaffold": "^2.5",
     "drupal/config_partial_export": "^1.4",
     "drupal/config_split": "^1.4",
-    "drupal/console": "^1.0.2",
+    "drupal/console": "~1.0",
     "drupal/core": "^8.7.0",
     "drupal/graphql": "^4.0@alpha",
     "drupal/pathauto": "^1.5",
