config sync correction and part of cypress test

--- a/config/sync/user.role.redator.yml
+++ b/config/sync/user.role.redator.yml
@@ -6,4 +6,19 @@ id: redator
 label: Redator
 weight: 3
 is_admin: null
-permissions: {  }
+permissions:
+  - 'access toolbar'
+  - 'cancel account'
+  - 'change own username'
+  - 'create article content'
+  - 'create noticias content'
+  - 'create page content'
+  - 'create url aliases'
+  - 'delete own article content'
+  - 'delete own noticias content'
+  - 'delete own page content'
+  - 'edit own article content'
+  - 'edit own comments'
+  - 'edit own noticias content'
+  - 'edit own page content'
+  - 'view own unpublished content'
