--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "open": "cypress open"
   },
   "devDependencies": {
-    "cypress": "^3.5.0"
+    "cypress": "^3.5.0",
+    "cypress-file-upload": "^3.4.0"
   }
 }
