--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "drupal/config_partial_export": "^1.4",
     "drupal/pathauto": "^1.5",
     "drupal/config_split": "^1.4",
-    "drupal/console": "~1.0",
+    "drupal/console": "^1.0.2",
     "drupal/core": "^8.7.0",
     "drupal/graphql": "^4.0@alpha",
     "drupal/school_zymphonies_theme": "^1.1",
