changing redator role permissions

--- a/config/sync/user.role.redator.yml
+++ b/config/sync/user.role.redator.yml
@@ -11,14 +11,17 @@ permissions:
   - 'cancel account'
   - 'change own username'
   - 'create article content'
+  - 'create news content'
   - 'create noticias content'
   - 'create page content'
   - 'create url aliases'
   - 'delete own article content'
+  - 'delete own news content'
   - 'delete own noticias content'
   - 'delete own page content'
   - 'edit own article content'
   - 'edit own comments'
+  - 'edit own news content'
   - 'edit own noticias content'
   - 'edit own page content'
   - 'view own unpublished content'
