--- a/config/sync/core.entity_view_display.node.news.default.yml
+++ b/config/sync/core.entity_view_display.node.news.default.yml
@@ -1,4 +1,4 @@
-uuid: 9775a54c-0ccb-4b77-8a77-fba7f939b909
+uuid: 26037d34-5ae3-4cee-a70e-048750bd50a7
 langcode: pt-br
 status: true
 dependencies:
@@ -6,7 +6,7 @@ dependencies:
     - field.field.node.news.body
     - field.field.node.news.field_featured_image
     - field.field.node.news.field_photo_gallery
-    - image.style.galeria
+    - image.style.large
     - node.type.news
   module:
     - image
@@ -26,10 +26,10 @@ content:
     region: content
   field_featured_image:
     weight: 1
-    label: above
+    label: hidden
     settings:
       image_style: large
-      image_link: content
+      image_link: ''
     third_party_settings: {  }
     type: image
     region: content
@@ -37,7 +37,7 @@ content:
     weight: 3
     label: above
     settings:
-      image_style: galeria
+      image_style: large
       image_link: ''
     third_party_settings: {  }
     type: image
