--- a/config/sync/ast_theme.settings.yml
+++ b/config/sync/ast_theme.settings.yml
@@ -5,7 +5,7 @@ features:
   favicon: 1
 logo:
   use_default: 0
-  path: 'public://logo (cópia).PNG'
+  path: 'public://logo.PNG'
 favicon:
   use_default: 0
   path: 'public://favicon.PNG'
