--- a/config/sync/user.role.redator.yml
+++ b/config/sync/user.role.redator.yml
@@ -14,14 +14,17 @@ permissions:
   - 'create news content'
   - 'create noticias content'
   - 'create page content'
+  - 'create parceiro content'
   - 'create url aliases'
   - 'delete own article content'
   - 'delete own news content'
   - 'delete own noticias content'
   - 'delete own page content'
+  - 'delete own parceiro content'
   - 'edit own article content'
   - 'edit own comments'
   - 'edit own news content'
   - 'edit own noticias content'
   - 'edit own page content'
+  - 'edit own parceiro content'
   - 'view own unpublished content'
