--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -54,6 +54,7 @@ theme:
   bartik: 0
   seven: 0
   school_zymphonies_theme: 0
+  ast_theme: 0
 profile: standard
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
