added the ast theme as the default site theme and added the ast logo on the website home screen.

--- a/config/sync/ast_theme.settings.yml
+++ b/config/sync/ast_theme.settings.yml
@@ -5,10 +5,10 @@ features:
   favicon: 1
 logo:
   use_default: 0
-  path: 'public://logo.PNG'
+  path: 'public://logo_0.PNG'
 favicon:
   use_default: 0
-  path: 'public://favicon.PNG'
+  path: 'public://favicon_0.PNG'
   mimetype: image/png
 show_social_icon: 0
 facebook_url: ''
@@ -20,3 +20,15 @@ rss_url: ''
 show_credit_link: 0
 no_of_slides: '3'
 show_slideshow: 1
+slide_image_path1: {  }
+slide_title_1: ''
+slide_description_1: ''
+slide_url_1: ''
+slide_image_path2: {  }
+slide_title_2: ''
+slide_description_2: ''
+slide_url_2: ''
+slide_image_path3: {  }
+slide_title_3: ''
+slide_description_3: ''
+slide_url_3: ''
