--- a/web/themes/custom/ast_theme/ast_theme.libraries.yml
+++ b/web/themes/custom/ast_theme/ast_theme.libraries.yml
@@ -1,8 +1,7 @@
 # global styling
 global-styling:
-  Version: 1.x
+  version: 1.x
   css:
     theme:
       css/global.css: {}
       css/media.css: {}
-  
