adding cursos content type and changing coordinator permissions

--- a/config/sync/user.role.coordinator.yml
+++ b/config/sync/user.role.coordinator.yml
@@ -6,4 +6,24 @@ id: coordinator
 label: Coordenador
 weight: 4
 is_admin: null
-permissions: {  }
+permissions:
+  - 'access toolbar'
+  - 'cancel account'
+  - 'change own username'
+  - 'create article content'
+  - 'create cursos content'
+  - 'create news content'
+  - 'create page content'
+  - 'create partner content'
+  - 'create url aliases'
+  - 'delete own article content'
+  - 'delete own cursos content'
+  - 'delete own news content'
+  - 'delete own page content'
+  - 'delete own partner content'
+  - 'edit own article content'
+  - 'edit own cursos content'
+  - 'edit own news content'
+  - 'edit own page content'
+  - 'edit own partner content'
+  - 'view own unpublished content'
