--- a/config/sync/user.role.coordinator.yml
+++ b/config/sync/user.role.coordinator.yml
@@ -11,17 +11,20 @@ permissions:
   - 'cancel account'
   - 'change own username'
   - 'create article content'
+  - 'create courses content'
   - 'create cursos content'
   - 'create news content'
   - 'create page content'
   - 'create partner content'
   - 'create url aliases'
   - 'delete own article content'
+  - 'delete own courses content'
   - 'delete own cursos content'
   - 'delete own news content'
   - 'delete own page content'
   - 'delete own partner content'
   - 'edit own article content'
+  - 'edit own courses content'
   - 'edit own cursos content'
   - 'edit own news content'
   - 'edit own page content'
